k8s.manifests/daemonset-celery-workers.yml
---
# Celery Workers DaemonSet (1 worker per node)
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: trading-ai-backend-celery-workers
  namespace: default
  labels:
    app: trading-ai-backend-celery-workers
    component: backend
spec:
  selector:
    matchLabels:
      app: trading-ai-backend-celery-workers
  template:
    metadata:
      labels:
        app: trading-ai-backend-celery-workers
        component: backend
    spec:
      containers:
        - name: trading-ai-backend-celery-worker
          image: python:3.13.1
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          command:
            - /bin/bash
            - -c
            - |
              export DATABASE_URL="postgresql://${DATABASE_USERNAME}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_SCHEMA}"
              export CELERY_BROKER_URL="pyamqp://${RABBITMQ_USER}:${RABBITMQ_PASSWORD}@trading-ai-backend-rabbitmq-service:${RABBITMQ_PORT}//"
              export CELERY_RESULT_BACKEND="redis://:${REDIS_PASSWORD}@trading-ai-backend-redis-service:${REDIS_PORT}/0"
              cd /app;
              python -m tox run -e rest-api-celery-worker;
          volumeMounts:
            - name: app-storage
              mountPath: /app
          
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
      
      volumes:
        - name: app-storage
          hostPath:
            path: /k8s/pv/trading-ai-backend-celery-workers
            type: DirectoryOrCreate
