k8s.manifests/deployment-sync.yml
---
# Sync Controller Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trading-ai-backend-sync-controller
  namespace: default
  labels:
    app: trading-ai-backend-sync-controller
    component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trading-ai-backend-sync-controller
  template:
    metadata:
      labels:
        app: trading-ai-backend-sync-controller
        component: backend
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      
      containers:
        - name: trading-ai-backend-sync-controller
          image: python:3.11.0
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          command:
            - /bin/bash
            - -c
            - |
              cd /app;
              python -m tox -e sync-controller;
          volumeMounts:
            - name: app-storage
              mountPath: /app
          
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
      
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: pvc-trading-ai-backend-sync
