k8s.manifests/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pump-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pump-bot
  template:
    metadata:
      labels:
        app: pump-bot
    spec:
      containers:
        - name: pump-bot
          image: python:3.11.0
          command:
            - /bin/bash
            - -c
            - |
              apt update -y;
              apt upgrade -y;
              apt install python3-pip -y
              pip3 install --upgrade pip setuptools;
              pip3 install tox;
              cd /app;
              ./.env;
              python -m tox;
          volumeMounts:
            - name: pump-bot-storage
              mountPath: /app
            - name: config-volume
              mountPath: /app/.env
              subPath: .env
      volumes:
        - name: pump-bot-storage
          persistentVolumeClaim:
            claimName: pvc-pump-bot
        - name: config-volume
          configMap:
            name: pump-bot-config
            items:
              - key: .env
                path: .env
