k8s.manifests/services.yml
---
# Redis Service
apiVersion: v1
kind: Service
metadata:
  name: trading-ai-backend-redis-service
  namespace: default
  labels:
    app: trading-ai-backend-redis
    component: cache
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: redis
  selector:
    app: trading-ai-backend-redis
